# mikir-kids

./: .gitignore  PRD – Math Deliberate Practice MVP.md  Project Overview & Status.md  README.md  UI Execution Plan.md  ui plan.md
backend/: .gitignore  README.md  ensure_uv.ps1  pyproject.toml  test_session_flow_req.py  test_user_api.py
backend/app/: main.py
backend/app/api/: dashboard.py  sessions.py  users.py
backend/app/models/: database.py  models.py
backend/app/services/: user_id_service.py
backend/database/: run_migrations.py
backend/database/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_enable_rls.sql  004_restrict_to_mcq_only.sql
backend/scripts/: create_env.py  test_db_connection.py
database/: SETUP_INSTRUCTIONS.md
docs/: AuthLanding Implementation Plan.md  AuthLanding Spacing Analysis & Implementation Plan.md  Dashboard Missing Features Analysis.md  Dashboard Missing States & Edge Cases.md  Dashboard_Recommendation_System_Plan.md  OCR_Implementation_Plan.md  PRD – Math Deliberate Practice MVP.md  Pedagogy & Mastery Learning Review.md  Practice Session UI Flow & Wireframe.md  Project Overview & Status.md  SETUP_GUIDE.md  Skills_Conversion_Plan.md  Spacing System & Design Tokens Guide.md  TanStack_Implementation_Plan.md  orm_to_sql_migration_analysis.md  tech stack and project setup.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  design-tokens.css  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: LoadingSpinner.tsx
(+44 files in other folders)
